mobile FE redesign

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -362,7 +362,7 @@
 	"arenella-recruiter-account-detail-payment-invoice-type-message": "Bitte wählen Sie, ob Sie als Unternehmen oder als Privatperson eine Rechnung erhalten möchten",
 	"arenella-recruiter-account-detail-payment-invoice-type-private-person": "Privatperson",
 	"arenella-recruiter-account-detail-payment-reg-num": "Handelsregister",
-	"arenella-recruiter-account-detail-subs-active": "Aktiviert / Aktiviert",
+	"arenella-recruiter-account-detail-subs-active": "Aktiviert",
 	"arenella-recruiter-account-detail-subs-created": "Erstellt",
 	"arenella-recruiter-account-detail-subs-id": "Abonnement-ID",
 	"arenella-recruiter-account-detail-subs-status": "Status",
