--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -362,7 +362,7 @@
 	"arenella-recruiter-account-detail-payment-invoice-type-message": "Please select if you would like to be invoiced as a Company or as a private individual",
 	"arenella-recruiter-account-detail-payment-invoice-type-private-person": "Private Individual",
 	"arenella-recruiter-account-detail-payment-reg-num": "Company Registration Number",
-	"arenella-recruiter-account-detail-subs-active": "Activated / Activates",
+	"arenella-recruiter-account-detail-subs-active": "Activated",
 	"arenella-recruiter-account-detail-subs-created": "Created",
 	"arenella-recruiter-account-detail-subs-id": "Subscription Id",
 	"arenella-recruiter-account-detail-subs-status": "Status",
