--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -362,7 +362,7 @@
 	"arenella-recruiter-account-detail-payment-invoice-type-message": "Seleccione si desea que le facturemos como empresa o como particular",
 	"arenella-recruiter-account-detail-payment-invoice-type-private-person": "Particular",
 	"arenella-recruiter-account-detail-payment-reg-num": "Número de registro de la compañía",
-	"arenella-recruiter-account-detail-subs-active": "Activado / Activa",
+	"arenella-recruiter-account-detail-subs-active": "Activado",
 	"arenella-recruiter-account-detail-subs-created": "Creado",
 	"arenella-recruiter-account-detail-subs-id": "Identificación de suscripción",
 	"arenella-recruiter-account-detail-subs-status": "Estado",
