--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -362,7 +362,7 @@
 	"arenella-recruiter-account-detail-payment-invoice-type-message": "Veuillez sélectionner si vous souhaitez être facturé en tant qu'entreprise ou en tant que particulier",
 	"arenella-recruiter-account-detail-payment-invoice-type-private-person": "Particulier",
 	"arenella-recruiter-account-detail-payment-reg-num": "Numéro d'entreprise",
-	"arenella-recruiter-account-detail-subs-active": "Activé / Active",
+	"arenella-recruiter-account-detail-subs-active": "Activé",
 	"arenella-recruiter-account-detail-subs-created": "Créé",
 	"arenella-recruiter-account-detail-subs-id": "Id d'abonnement",
 	"arenella-recruiter-account-detail-subs-status": "Statut",
