--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -362,7 +362,7 @@
 	"arenella-recruiter-account-detail-payment-invoice-type-message": "Seleziona se desideri essere fatturato come Azienda o come Privato",
 	"arenella-recruiter-account-detail-payment-invoice-type-private-person": "Privato",
 	"arenella-recruiter-account-detail-payment-reg-num": "Numero di registrazione della società",
-	"arenella-recruiter-account-detail-subs-active": "Attivato / Attiva",
+	"arenella-recruiter-account-detail-subs-active": "Attivato",
 	"arenella-recruiter-account-detail-subs-created": "Creato",
 	"arenella-recruiter-account-detail-subs-id": "ID abbonamento",
 	"arenella-recruiter-account-detail-subs-status": "Stato",
