--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -362,7 +362,7 @@
 	"arenella-recruiter-account-detail-payment-invoice-type-message": "Selecteer of u als bedrijf of als particulier gefactureerd wilt worden",
 	"arenella-recruiter-account-detail-payment-invoice-type-private-person": "Particulier",
 	"arenella-recruiter-account-detail-payment-reg-num": "Bedrijf registratienummer",
-	"arenella-recruiter-account-detail-subs-active": "Geactiveerd / Activeert",
+	"arenella-recruiter-account-detail-subs-active": "Geactiveerd",
 	"arenella-recruiter-account-detail-subs-created": "Gemaakt",
 	"arenella-recruiter-account-detail-subs-id": "Abonnement-ID",
 	"arenella-recruiter-account-detail-subs-status": "Toestand",
