small layout changes

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -637,7 +637,7 @@
 	"arenella-stats-by-function": "Verfügbar nach Funktion",
 	"arenella-stats-by-function-btn-latest": "Neueste",
 	"arenella-stats-by-function-btn-todays": "Heute",
-	"arenella-stats-candidate-views": "Angeforderte Kandidatenansichten",
+	"arenella-stats-candidate-views": "Ansichten",
 	"arenella-stats-candidate-views-btn-today": "Heute",
 	"arenella-stats-candidate-views-btn-week": "Diese Woche",
 	"arenella-stats-current-week": "Aktuelle Woche",
