--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -637,7 +637,7 @@
 	"arenella-stats-by-function": "Disponible par fonction",
 	"arenella-stats-by-function-btn-latest": "Dernier",
 	"arenella-stats-by-function-btn-todays": "Aujourd'hui",
-	"arenella-stats-candidate-views": "Opinions des candidats demandées",
+	"arenella-stats-candidate-views": "Vues",
 	"arenella-stats-candidate-views-btn-today": "Aujourd'hui",
 	"arenella-stats-candidate-views-btn-week": "Cette semaine",
 	"arenella-stats-current-week": "Semaine en cours",
