--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -637,7 +637,7 @@
 	"arenella-stats-by-function": "Disponibile per funzione",
 	"arenella-stats-by-function-btn-latest": "Ultimo",
 	"arenella-stats-by-function-btn-todays": "Oggi",
-	"arenella-stats-candidate-views": "Visualizzazioni richieste ai candidati",
+	"arenella-stats-candidate-views": "Viste",
 	"arenella-stats-candidate-views-btn-today": "Oggi",
 	"arenella-stats-candidate-views-btn-week": "Questa settimana",
 	"arenella-stats-current-week": "Settimana corrente",
