--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -637,7 +637,7 @@
 	"arenella-stats-by-function": "Beschikbaar per functie",
 	"arenella-stats-by-function-btn-latest": "Laatste",
 	"arenella-stats-by-function-btn-todays": "Vandaag",
-	"arenella-stats-candidate-views": "Gevraagde kandidaatweergaven",
+	"arenella-stats-candidate-views": "Bekeken",
 	"arenella-stats-candidate-views-btn-today": "Vandaag",
 	"arenella-stats-candidate-views-btn-week": "Deze week",
 	"arenella-stats-current-week": "Huidige week",
