--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -637,7 +637,7 @@
 	"arenella-stats-by-function": "Available by Function",
 	"arenella-stats-by-function-btn-latest": "Latest",
 	"arenella-stats-by-function-btn-todays": "Todays",
-	"arenella-stats-candidate-views": "Requested Candidate Views",
+	"arenella-stats-candidate-views": "Views",
 	"arenella-stats-candidate-views-btn-today": "Today",
 	"arenella-stats-candidate-views-btn-week": "This week",
 	"arenella-stats-current-week": "Current Week",
