--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -637,7 +637,7 @@
 	"arenella-stats-by-function": "Disponible por función",
 	"arenella-stats-by-function-btn-latest": "El último",
 	"arenella-stats-by-function-btn-todays": "Hoy",
-	"arenella-stats-candidate-views": "Opiniones de candidatos solicitadas",
+	"arenella-stats-candidate-views": "Vistos",
 	"arenella-stats-candidate-views-btn-today": "Hoy",
 	"arenella-stats-candidate-views-btn-week": "ESTA SEMANA",
 	"arenella-stats-current-week": "Semana actual",
