small extractor updates and UI changes

--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -477,7 +477,7 @@
 	"arenella-recruiter-listing-step5": "Habilidades requeridas",
 	"arenella-recruiter-listing-title": "Título",
 	"arenella-recruiter-listing-type": "Tipo",
-	"arenella-recruiter-listing-views": "Puntos de vista",
+	"arenella-recruiter-listing-views": "Vista",
 	"arenella-recruiter-listing-years-experience": "",
 	"arenella-recruiter-mp-add-belgium": "Bélgica",
 	"arenella-recruiter-mp-add-both": "Ambos",
