--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -477,7 +477,7 @@
 	"arenella-recruiter-listing-step5": "Vereiste vaardigheden",
 	"arenella-recruiter-listing-title": "Titel",
 	"arenella-recruiter-listing-type": "Type",
-	"arenella-recruiter-listing-views": "Keer bekeken",
+	"arenella-recruiter-listing-views": "Bekeken",
 	"arenella-recruiter-listing-years-experience": "Jaren ervaring",
 	"arenella-recruiter-mp-add-belgium": "België",
 	"arenella-recruiter-mp-add-both": "Beide",
