job type groups and splitting architect and project managers

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -4,7 +4,7 @@
 	"ANDROID": "Android",
 	"angular": "Angular",
 	"ANGULAR": "Angular",
-	"ARCHITECT": "Softwarearchitekt",
+	"ARCHITECT": "Architekt",
 	"ARCHITECT_SHORT": "Architekt",
 	"arenella-accounts-menu-availability": "Verfügbarkeit",
 	"arenella-accounts-menu-candidates": "Kandidaten",
@@ -794,21 +794,25 @@
 	"CROATIAN": "Kroatisch",
 	"CSHARP_DEV": "C#-Entwickler",
 	"CSHARP_DEV_SHORT": "C#",
+	"CTO": "CTO",
 	"CYBER_SECURITY": "Cybersicherheit",
 	"CYPRUS": "Zypern",
 	"CZECH": "Tschechisch",
 	"CZECH_REPUBLIC": "Tschechische Republik",
 	"DACH": "Dach",
 	"DANISH": "Dänisch",
+	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Datenanalyst",
 	"DATA_SCIENTIST_SHORT": "Datenanalyst",
 	"DENMARK": "Dänemark",
+	"DIRECTOR": "Director",
 	"DUTCH": "Niederländisch",
 	"EASTERN_EUROPE": "Osteuropa",
 	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Ausbildung",
 	"ENERGY": "Energie",
 	"ENGLISH": "Englisch",
+	"ENTERPRISE_ARCHITECT": "Enterprise Architect",
 	"ESTONIA": "Estland",
 	"ESTONIAN": "Estnisch",
 	"EU_REMOTE": "Europa - Remote",
@@ -831,7 +835,7 @@
 	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Projektmanager",
 	"func-scrum-master": "Scrum Master",
-	"func-software-architect": "Softwarearchitekt",
+	"func-software-architect": "Architekt",
 	"func-software-dev": "Softwareentwickler",
 	"func-support": "IT-Unterstützung",
 	"func-support-sdet": "SDET",
@@ -879,6 +883,8 @@
 	"info-item-title-security-clearance": "",
 	"info-item-title-to": " Zu ",
 	"info-item-title-years-experience": "",
+	"INFRASTRUCTURE_ARCHITECT": "Infrastructure Architect",
+	"INFRASTRUCTURE_MANAGER": "Infrastructure Manager",
 	"INSURANCE": "Versicherung",
 	"ios": "IOS",
 	"IOS": "Ios",
@@ -1022,6 +1028,7 @@
 	"RUSSIAN": "Russisch",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Kandidat nicht mehr verfügbar",
@@ -1042,10 +1049,13 @@
 	"SLOVAKIAN": "Slowakisch",
 	"SLOVENIA": "Slowenien",
 	"SLOVENIAN": "Slowenisch",
+	"SOFTWARE_ARCHITECT": "Application Architect",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
 	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Softwareentwickler",
 	"SOFTWARE_DEVELOPER_SHORT": "Softwareentwicklung",
+	"SOFTWARE_MANAGER": "Software Manager",
+	"SOLUTIONS_ARCHITECT": "Solutions architect",
 	"SOUTHERN_EUROPE": "Südeuropa",
 	"SPACE": "Raum",
 	"SPAIN": "Spanien",
