--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -4,7 +4,7 @@
 	"ANDROID": "Android",
 	"angular": "Angular",
 	"ANGULAR": "Angular",
-	"ARCHITECT": "Software Architect",
+	"ARCHITECT": "Architect",
 	"ARCHITECT_SHORT": "Architect",
 	"arenella-accounts-menu-availability": "Availability",
 	"arenella-accounts-menu-candidates": "Candidates",
@@ -794,21 +794,25 @@
 	"CROATIAN": "Croatian",
 	"CSHARP_DEV": "C# Developer",
 	"CSHARP_DEV_SHORT": "C#",
+	"CTO": "CTO",
 	"CYBER_SECURITY": "Cyber Security",
 	"CYPRUS": "Cyprus",
 	"CZECH": "Czech",
 	"CZECH_REPUBLIC": "Czech Republic",
 	"DACH": "Dach",
 	"DANISH": "Danish",
+	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Data Analyst",
 	"DATA_SCIENTIST_SHORT": "Data Analyst",
 	"DENMARK": "Denmark",
+	"DIRECTOR": "Director",
 	"DUTCH": "Dutch",
 	"EASTERN_EUROPE": "Eastern Europe",
 	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Education",
 	"ENERGY": "Energy",
 	"ENGLISH": "English",
+	"ENTERPRISE_ARCHITECT": "Enterprise Architect",
 	"ESTONIA": "Estonia",
 	"ESTONIAN": "Estonian",
 	"EU_REMOTE": "Europe - Remote",
@@ -831,7 +835,7 @@
 	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Project Manager",
 	"func-scrum-master": "Scrum Master",
-	"func-software-architect": "Software Architect",
+	"func-software-architect": "Architect",
 	"func-software-dev": "Software Developer",
 	"func-support": "IT Support",
 	"func-support-sdet": "SDET",
@@ -879,6 +883,8 @@
 	"info-item-title-security-clearance": "Security Clearance",
 	"info-item-title-to": " to ",
 	"info-item-title-years-experience": "Years Experience",
+	"INFRASTRUCTURE_ARCHITECT": "Infrastructure Architect",
+	"INFRASTRUCTURE_MANAGER": "Infrastructure Manager",
 	"INSURANCE": "Insurance",
 	"ios": "IOS",
 	"IOS": "Ios",
@@ -1022,6 +1028,7 @@
 	"RUSSIAN": "Russian",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Candidate No Longer Available",
@@ -1042,10 +1049,13 @@
 	"SLOVAKIAN": "Slovakian",
 	"SLOVENIA": "Slovenia",
 	"SLOVENIAN": "Slovenian",
+	"SOFTWARE_ARCHITECT": "Application Architect",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
 	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Software Developer",
 	"SOFTWARE_DEVELOPER_SHORT": "Software Dev",
+	"SOFTWARE_MANAGER": "Software Manager",
+	"SOLUTIONS_ARCHITECT": "Solutions architect",
 	"SOUTHERN_EUROPE": "Southern Europe",
 	"SPACE": "Space",
 	"SPAIN": "Spain",
