--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -4,7 +4,7 @@
 	"ANDROID": "Android",
 	"angular": "Angular",
 	"ANGULAR": "Angular",
-	"ARCHITECT": "Arquitecto de software",
+	"ARCHITECT": "Arquitecto",
 	"ARCHITECT_SHORT": "Arquitecto",
 	"arenella-accounts-menu-availability": "Disponibilidad",
 	"arenella-accounts-menu-candidates": "Candidatos",
@@ -794,21 +794,25 @@
 	"CROATIAN": "Croata",
 	"CSHARP_DEV": "Desarrollador C#",
 	"CSHARP_DEV_SHORT": "C#",
+	"CTO": "CTO",
 	"CYBER_SECURITY": "Seguridad cibernética",
 	"CYPRUS": "Chipre",
 	"CZECH": "Checo",
 	"CZECH_REPUBLIC": "República Checa",
 	"DACH": "Dach",
 	"DANISH": "Danés",
+	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Analista de datos",
 	"DATA_SCIENTIST_SHORT": "Analista BI",
 	"DENMARK": "Dinamarca",
+	"DIRECTOR": "Director",
 	"DUTCH": "Holandés",
 	"EASTERN_EUROPE": "Europa Oriental",
 	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Educación",
 	"ENERGY": "Energía",
 	"ENGLISH": "Inglés",
+	"ENTERPRISE_ARCHITECT": "Enterprise Architect",
 	"ESTONIA": "Estonia",
 	"ESTONIAN": "Estonio",
 	"EU_REMOTE": "Europa - Remoto",
@@ -831,7 +835,7 @@
 	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Gerente de proyecto",
 	"func-scrum-master": "Maestro Scrum",
-	"func-software-architect": "Arquitecto de software",
+	"func-software-architect": "Arquitecto",
 	"func-software-dev": "Desarrollador de software",
 	"func-support": "Soporte de TI",
 	"func-support-sdet": "Desecho social",
@@ -879,6 +883,8 @@
 	"info-item-title-security-clearance": "",
 	"info-item-title-to": " A ",
 	"info-item-title-years-experience": "",
+	"INFRASTRUCTURE_ARCHITECT": "Infrastructure Architect",
+	"INFRASTRUCTURE_MANAGER": "Infrastructure Manager",
 	"INSURANCE": "Seguros",
 	"ios": "IOS",
 	"IOS": "Ios",
@@ -1022,6 +1028,7 @@
 	"RUSSIAN": "Ruso",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "El candidato ya no está disponible",
@@ -1042,10 +1049,13 @@
 	"SLOVAKIAN": "Eslovaco",
 	"SLOVENIA": "Eslovenia",
 	"SLOVENIAN": "Esloveno",
+	"SOFTWARE_ARCHITECT": "Application Architect",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
 	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Desarrollador de software",
 	"SOFTWARE_DEVELOPER_SHORT": "Desarrollo de software",
+	"SOFTWARE_MANAGER": "Software Manager",
+	"SOLUTIONS_ARCHITECT": "Solutions architect",
 	"SOUTHERN_EUROPE": "Europa del sur",
 	"SPACE": "Espacio",
 	"SPAIN": "España",
