--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -4,7 +4,7 @@
 	"ANDROID": "Android",
 	"angular": "Angular",
 	"ANGULAR": "Angular",
-	"ARCHITECT": "Architecte logiciel",
+	"ARCHITECT": "Architecte",
 	"ARCHITECT_SHORT": "Architecte",
 	"arenella-accounts-menu-availability": "Disponibilité",
 	"arenella-accounts-menu-candidates": "Candidats",
@@ -794,21 +794,25 @@
 	"CROATIAN": "Croate",
 	"CSHARP_DEV": "Développeur C#",
 	"CSHARP_DEV_SHORT": "C#",
+	"CTO": "CTO",
 	"CYBER_SECURITY": "Cybersécurité",
 	"CYPRUS": "Chypre",
 	"CZECH": "Tchèque",
 	"CZECH_REPUBLIC": "République tchèque",
 	"DACH": "Dach",
 	"DANISH": "Danois",
+	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Analyste de données",
 	"DATA_SCIENTIST_SHORT": "Analyste BI",
 	"DENMARK": "Danemark",
+	"DIRECTOR": "Director",
 	"DUTCH": "Néerlandais",
 	"EASTERN_EUROPE": "L'Europe de l'Est",
 	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Éducation",
 	"ENERGY": "Énergie",
 	"ENGLISH": "Anglais",
+	"ENTERPRISE_ARCHITECT": "Enterprise Architect",
 	"ESTONIA": "Estonie",
 	"ESTONIAN": "Estonien",
 	"EU_REMOTE": "Europe - À distance",
@@ -831,7 +835,7 @@
 	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Chef de projet",
 	"func-scrum-master": "Scrum Master",
-	"func-software-architect": "Architecte logiciel",
+	"func-software-architect": "Architecte",
 	"func-software-dev": "Développeur de logiciels",
 	"func-support": "Support Informatique",
 	"func-support-sdet": "SDET",
@@ -879,6 +883,8 @@
 	"info-item-title-security-clearance": "Habilitation de sécurité",
 	"info-item-title-to": " a ",
 	"info-item-title-years-experience": "Années d'expérience",
+	"INFRASTRUCTURE_ARCHITECT": "Infrastructure Architect",
+	"INFRASTRUCTURE_MANAGER": "Infrastructure Manager",
 	"INSURANCE": "Assurance",
 	"ios": "IOS",
 	"IOS": "Ios",
@@ -1022,6 +1028,7 @@
 	"RUSSIAN": "Russe",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Le candidat n'est plus disponible",
@@ -1042,10 +1049,13 @@
 	"SLOVAKIAN": "Slovaque",
 	"SLOVENIA": "La Slovénie",
 	"SLOVENIAN": "Slovène",
+	"SOFTWARE_ARCHITECT": "Application Architect",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
 	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Développeur de logiciels",
 	"SOFTWARE_DEVELOPER_SHORT": "Développement",
+	"SOFTWARE_MANAGER": "Software Manager",
+	"SOLUTIONS_ARCHITECT": "Solutions architect",
 	"SOUTHERN_EUROPE": "Europe du sud",
 	"SPACE": "l'espace",
 	"SPAIN": "Espagne",
