--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -4,7 +4,7 @@
 	"ANDROID": "Android",
 	"angular": "Angular",
 	"ANGULAR": "Angular",
-	"ARCHITECT": "Architetto del software",
+	"ARCHITECT": "Architetto",
 	"ARCHITECT_SHORT": "Architetto",
 	"arenella-accounts-menu-availability": "Disponibilità",
 	"arenella-accounts-menu-candidates": "Candidati",
@@ -794,21 +794,25 @@
 	"CROATIAN": "Croato",
 	"CSHARP_DEV": "Sviluppatore C#",
 	"CSHARP_DEV_SHORT": "C#",
+	"CTO": "CTO",
 	"CYBER_SECURITY": "Sicurezza informatica",
 	"CYPRUS": "Cipro",
 	"CZECH": "Ceco",
 	"CZECH_REPUBLIC": "Repubblica Ceca",
 	"DACH": "Basso",
 	"DANISH": "Danese",
+	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Analista di dati",
 	"DATA_SCIENTIST_SHORT": "Analista BI",
 	"DENMARK": "Danimarca",
+	"DIRECTOR": "Director",
 	"DUTCH": "Olandese",
 	"EASTERN_EUROPE": "Europa orientale",
 	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Istruzione",
 	"ENERGY": "Energia",
 	"ENGLISH": "Inglese",
+	"ENTERPRISE_ARCHITECT": "Enterprise Architect",
 	"ESTONIA": "Estonia",
 	"ESTONIAN": "Estone",
 	"EU_REMOTE": "Europa - Remoto",
@@ -831,7 +835,7 @@
 	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Responsabile del progetto",
 	"func-scrum-master": "Maestro di Scrum",
-	"func-software-architect": "Architetto del software",
+	"func-software-architect": "Architetto",
 	"func-software-dev": "Sviluppatore di software",
 	"func-support": "Supporto IT",
 	"func-support-sdet": "SDIET",
@@ -879,6 +883,8 @@
 	"info-item-title-security-clearance": "Autorizzazione di sicurezza",
 	"info-item-title-to": " a",
 	"info-item-title-years-experience": "Anni di esperienza",
+	"INFRASTRUCTURE_ARCHITECT": "Infrastructure Architect",
+	"INFRASTRUCTURE_MANAGER": "Infrastructure Manager",
 	"INSURANCE": "Assicurazione",
 	"ios": "IOS",
 	"IOS": "Ios",
@@ -1022,6 +1028,7 @@
 	"RUSSIAN": "Russo",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Candidato non più disponibile",
@@ -1042,10 +1049,13 @@
 	"SLOVAKIAN": "Slovacco",
 	"SLOVENIA": "Slovenia",
 	"SLOVENIAN": "Sloveno",
+	"SOFTWARE_ARCHITECT": "Application Architect",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
 	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Sviluppatore di software",
 	"SOFTWARE_DEVELOPER_SHORT": "Sviluppo software",
+	"SOFTWARE_MANAGER": "Software Manager",
+	"SOLUTIONS_ARCHITECT": "Solutions architect",
 	"SOUTHERN_EUROPE": "Europa meridionale",
 	"SPACE": "Spazio",
 	"SPAIN": "Spagna",
