--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -4,7 +4,7 @@
 	"ANDROID": "Android",
 	"angular": "Angular",
 	"ANGULAR": "Angular",
-	"ARCHITECT": "Softwarearchitect",
+	"ARCHITECT": "Architect",
 	"ARCHITECT_SHORT": "Architect",
 	"arenella-accounts-menu-availability": "Beschikbaarheid",
 	"arenella-accounts-menu-candidates": "Kandidaten",
@@ -794,21 +794,25 @@
 	"CROATIAN": "Kroatisch",
 	"CSHARP_DEV": "C#-ontwikkelaar",
 	"CSHARP_DEV_SHORT": "C#",
+	"CTO": "CTO",
 	"CYBER_SECURITY": "Cyberbeveiliging",
 	"CYPRUS": "Cyprus",
 	"CZECH": "Tsjechisch",
 	"CZECH_REPUBLIC": "Tsjechische Republiek",
 	"DACH": "Dach",
 	"DANISH": "Deens",
+	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Data-analist",
 	"DATA_SCIENTIST_SHORT": "Data Analist",
 	"DENMARK": "Denemarken",
+	"DIRECTOR": "Director",
 	"DUTCH": "Nederlands",
 	"EASTERN_EUROPE": "Oost-Europa",
 	"ECOMMERCE": "E-Commerce",
 	"EDUCATION": "Onderwijs",
 	"ENERGY": "Energie",
 	"ENGLISH": "Engels",
+	"ENTERPRISE_ARCHITECT": "Enterprise Architect",
 	"ESTONIA": "Estland",
 	"ESTONIAN": "Estisch",
 	"EU_REMOTE": "Europa - Remote",
@@ -831,7 +835,7 @@
 	"func-network-admin": "DevOps / SysOps",
 	"func-pmo": "Projectleider",
 	"func-scrum-master": "Scrum Master",
-	"func-software-architect": "Software architect",
+	"func-software-architect": "Architect",
 	"func-software-dev": "Software ontwikkelaar",
 	"func-support": "IT ondersteuning",
 	"func-support-sdet": "SDET",
@@ -879,6 +883,8 @@
 	"info-item-title-security-clearance": "Veiligheidsmachtiging",
 	"info-item-title-to": " tot ",
 	"info-item-title-years-experience": "Jaren ervaring",
+	"INFRASTRUCTURE_ARCHITECT": "Infrastructure Architect",
+	"INFRASTRUCTURE_MANAGER": "Infrastructure Manager",
 	"INSURANCE": "Verzekering",
 	"ios": "IOS",
 	"IOS": "Ios",
@@ -1022,6 +1028,7 @@
 	"RUSSIAN": "Russisch",
 	"rust": "Rust",
 	"RUST": "Rust",
+	"SALESFORCE": "Salesforce",
 	"sap": "SAP",
 	"SAP": "SAP",
 	"saved-candidate-no-longer-available": "Kandidaat niet langer beschikbaar",
@@ -1042,10 +1049,13 @@
 	"SLOVAKIAN": "Slowaaks",
 	"SLOVENIA": "Slovenië",
 	"SLOVENIAN": "Sloveens",
+	"SOFTWARE_ARCHITECT": "Application Architect",
 	"SOFTWARE_DEV_IN_TEST": "SDET",
 	"SOFTWARE_DEV_IN_TEST_SHORT": "SDET",
 	"SOFTWARE_DEVELOPER": "Softwareontwikkelaar",
 	"SOFTWARE_DEVELOPER_SHORT": "Softwareontwikkeling",
+	"SOFTWARE_MANAGER": "Software Manager",
+	"SOLUTIONS_ARCHITECT": "Solutions architect",
 	"SOUTHERN_EUROPE": "Zuid-Europa",
 	"SPACE": "Ruimte",
 	"SPAIN": "Spanje",
