split of project managers and architects

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -804,6 +804,7 @@
 	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Datenanalyst",
 	"DATA_SCIENTIST_SHORT": "Datenanalyst",
+	"DELIVERY_MANAGER": "Delivery manager",
 	"DENMARK": "Dänemark",
 	"DIRECTOR": "Director",
 	"DUTCH": "Niederländisch",
@@ -966,6 +967,7 @@
 	"PORTUGUESE": "Portugiesisch",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
+	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Projektmanager",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
