--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -804,6 +804,7 @@
 	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Data Analyst",
 	"DATA_SCIENTIST_SHORT": "Data Analyst",
+	"DELIVERY_MANAGER": "Delivery manager",
 	"DENMARK": "Denmark",
 	"DIRECTOR": "Director",
 	"DUTCH": "Dutch",
@@ -966,6 +967,7 @@
 	"PORTUGUESE": "Portuguese",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
+	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Project Manager",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
