--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -804,6 +804,7 @@
 	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Analista de datos",
 	"DATA_SCIENTIST_SHORT": "Analista BI",
+	"DELIVERY_MANAGER": "Delivery manager",
 	"DENMARK": "Dinamarca",
 	"DIRECTOR": "Director",
 	"DUTCH": "Holandés",
@@ -966,6 +967,7 @@
 	"PORTUGUESE": "Portugués",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
+	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Gerente de proyecto",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
