--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -804,6 +804,7 @@
 	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Analyste de données",
 	"DATA_SCIENTIST_SHORT": "Analyste BI",
+	"DELIVERY_MANAGER": "Delivery manager",
 	"DENMARK": "Danemark",
 	"DIRECTOR": "Director",
 	"DUTCH": "Néerlandais",
@@ -966,6 +967,7 @@
 	"PORTUGUESE": "Portugais",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
+	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Chef de projet",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
