--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -804,6 +804,7 @@
 	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Analista di dati",
 	"DATA_SCIENTIST_SHORT": "Analista BI",
+	"DELIVERY_MANAGER": "Delivery manager",
 	"DENMARK": "Danimarca",
 	"DIRECTOR": "Director",
 	"DUTCH": "Olandese",
@@ -966,6 +967,7 @@
 	"PORTUGUESE": "Portoghese",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
+	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Responsabile del progetto",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
