--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -804,6 +804,7 @@
 	"DATA_ARCHITECT": "Data Architect",
 	"DATA_SCIENTIST": "Data-analist",
 	"DATA_SCIENTIST_SHORT": "Data Analist",
+	"DELIVERY_MANAGER": "Delivery manager",
 	"DENMARK": "Denemarken",
 	"DIRECTOR": "Director",
 	"DUTCH": "Nederlands",
@@ -966,6 +967,7 @@
 	"PORTUGUESE": "Portugees",
 	"product-owner": "Product Owner",
 	"PRODUCT_OWNER": "Product Owner",
+	"PROGRAMME_MANAGER": "Programme Manager",
 	"PROJECT_MANAGER": "Projectleider",
 	"PROJECT_MANAGER_SHORT": "PM",
 	"python": "Python",
