new job board UI

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -903,6 +903,8 @@
 	"LATVIA": "Lettland",
 	"LATVIAN": "Lettisch",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-applications": "Bewerbungen",
+	"listings-views": "Ansichten",
 	"LITHUANIA": "Litauen",
 	"LITHUANIAN": "Litauisch",
 	"login-user-invalid-login": "Ungültiger Anmeldeversuch",
