--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -903,6 +903,8 @@
 	"LATVIA": "Latvia",
 	"LATVIAN": "Latvian",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-applications": "Applications",
+	"listings-views": "Views",
 	"LITHUANIA": "Lithuaia",
 	"LITHUANIAN": "Lithuanian",
 	"login-user-invalid-login": "Invalid Login attempt",
