--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -903,6 +903,8 @@
 	"LATVIA": "Letonia",
 	"LATVIAN": "Letón",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-applications": "Solicitudes ",
+	"listings-views": "Vistos",
 	"LITHUANIA": "Lituania",
 	"LITHUANIAN": "Lituano",
 	"login-user-invalid-login": "Intento de inicio de sesión no válido",
