--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -903,6 +903,8 @@
 	"LATVIA": "Lettonie",
 	"LATVIAN": "Letton",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-applications": "Candidatures",
+	"listings-views": "Vues",
 	"LITHUANIA": "Lituanie",
 	"LITHUANIAN": "Lituanien",
 	"login-user-invalid-login": "Tentative de connexion invalide",
