--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -903,6 +903,8 @@
 	"LATVIA": "Lettonia",
 	"LATVIAN": "Lettone",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-applications": "Candidature",
+	"listings-views": "Viste",
 	"LITHUANIA": "Lituania",
 	"LITHUANIAN": "Lituano",
 	"login-user-invalid-login": "Tentativo di accesso non valido",
