--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -903,6 +903,8 @@
 	"LATVIA": "Letland",
 	"LATVIAN": "Lets",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-applications": "Sollicitaties",
+	"listings-views": "Bekeken",
 	"LITHUANIA": "Litouwen",
 	"LITHUANIAN": "Litouws",
 	"login-user-invalid-login": "Ongeldige inlogpoging",
