--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -903,6 +903,7 @@
 	"LATVIA": "Lettland",
 	"LATVIAN": "Lettisch",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-alerts": "Benutzer benachrichtigt",
 	"listings-applications": "Bewerbungen",
 	"listings-views": "Ansichten",
 	"LITHUANIA": "Litauen",
