--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -903,6 +903,7 @@
 	"LATVIA": "Latvia",
 	"LATVIAN": "Latvian",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-alerts": "Users notified",
 	"listings-applications": "Applications",
 	"listings-views": "Views",
 	"LITHUANIA": "Lithuaia",
