--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -903,6 +903,7 @@
 	"LATVIA": "Letonia",
 	"LATVIAN": "Letón",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-alerts": "Usuarios notificados",
 	"listings-applications": "Solicitudes ",
 	"listings-views": "Vistos",
 	"LITHUANIA": "Lituania",
