--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -903,6 +903,7 @@
 	"LATVIA": "Lettonie",
 	"LATVIAN": "Letton",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-alerts": "Utilisateurs avertis",
 	"listings-applications": "Candidatures",
 	"listings-views": "Vues",
 	"LITHUANIA": "Lituanie",
