--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -903,6 +903,7 @@
 	"LATVIA": "Lettonia",
 	"LATVIAN": "Lettone",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-alerts": "Avvisati utenti",
 	"listings-applications": "Candidature",
 	"listings-views": "Viste",
 	"LITHUANIA": "Lituania",
