--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -903,6 +903,7 @@
 	"LATVIA": "Letland",
 	"LATVIAN": "Lets",
 	"LIECHTENSTEIN": "Liechtenstein",
+	"listings-alerts": "Gebruikers geïnformeerd",
 	"listings-applications": "Sollicitaties",
 	"listings-views": "Bekeken",
 	"LITHUANIA": "Litouwen",
