listing contact request chart

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -661,6 +661,8 @@
 	"arenella-stats-recruiter-downloads": "Downloads für Personalvermittler",
 	"arenella-stats-recruiter-downloads-btn-today": "Heute",
 	"arenella-stats-recruiter-downloads-btn-week": "Diese Woche",
+	"arenella-stats-recruiter-downloads-contact-requests-today": "Contact Requests Today",
+	"arenella-stats-recruiter-downloads-contact-requests-week": "Contact Request This Week",
 	"arenella-stats-recruiter-downloads-totals": "Gesamt",
 	"arenella-stats-recruiter-downloads-views-today": "Heute angesehene Inserate",
 	"arenella-stats-recruiter-downloads-views-week": "Inserate, die diese Woche angesehen wurden",
