--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -661,6 +661,8 @@
 	"arenella-stats-recruiter-downloads": "Téléchargements pour les recruteurs",
 	"arenella-stats-recruiter-downloads-btn-today": "Aujourd'hui",
 	"arenella-stats-recruiter-downloads-btn-week": "Cette semaine",
+	"arenella-stats-recruiter-downloads-contact-requests-today": "Contact Requests Today",
+	"arenella-stats-recruiter-downloads-contact-requests-week": "Contact Request This Week",
 	"arenella-stats-recruiter-downloads-totals": "Totaux",
 	"arenella-stats-recruiter-downloads-views-today": "Annonces consultées aujourd'hui",
 	"arenella-stats-recruiter-downloads-views-week": "Annonces consultées cette semaine",
