--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -661,6 +661,8 @@
 	"arenella-stats-recruiter-downloads": "Download del reclutatore",
 	"arenella-stats-recruiter-downloads-btn-today": "Oggi",
 	"arenella-stats-recruiter-downloads-btn-week": "Questa settimana",
+	"arenella-stats-recruiter-downloads-contact-requests-today": "Contact Requests Today",
+	"arenella-stats-recruiter-downloads-contact-requests-week": "Contact Request This Week",
 	"arenella-stats-recruiter-downloads-totals": "Totali",
 	"arenella-stats-recruiter-downloads-views-today": "Annunci visualizzati oggi",
 	"arenella-stats-recruiter-downloads-views-week": "Annunci visualizzati questa settimana",
