--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -661,6 +661,8 @@
 	"arenella-stats-recruiter-downloads": "Recruiter-downloads",
 	"arenella-stats-recruiter-downloads-btn-today": "Vandaag",
 	"arenella-stats-recruiter-downloads-btn-week": "Deze week",
+	"arenella-stats-recruiter-downloads-contact-requests-today": "Contact Requests Today",
+	"arenella-stats-recruiter-downloads-contact-requests-week": "Contact Request This Week",
 	"arenella-stats-recruiter-downloads-totals": "Totalen",
 	"arenella-stats-recruiter-downloads-views-today": "Advertenties vandaag bekeken",
 	"arenella-stats-recruiter-downloads-views-week": "Advertenties deze week bekeken",
