--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -661,6 +661,8 @@
 	"arenella-stats-recruiter-downloads": "Recruiter downloads",
 	"arenella-stats-recruiter-downloads-btn-today": "Today",
 	"arenella-stats-recruiter-downloads-btn-week": "This week",
+	"arenella-stats-recruiter-downloads-contact-requests-today": "Contact Requests Today",
+	"arenella-stats-recruiter-downloads-contact-requests-week": "Contact Request This Week",
 	"arenella-stats-recruiter-downloads-totals": "Totals",
 	"arenella-stats-recruiter-downloads-views-today": "Listings viewed today",
 	"arenella-stats-recruiter-downloads-views-week": "Listings viewed this week",
