--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -661,6 +661,8 @@
 	"arenella-stats-recruiter-downloads": "Descargas para reclutadores",
 	"arenella-stats-recruiter-downloads-btn-today": "Hoy",
 	"arenella-stats-recruiter-downloads-btn-week": "ESTA SEMANA",
+	"arenella-stats-recruiter-downloads-contact-requests-today": "Contact Requests Today",
+	"arenella-stats-recruiter-downloads-contact-requests-week": "Contact Request This Week",
 	"arenella-stats-recruiter-downloads-totals": "Totales",
 	"arenella-stats-recruiter-downloads-views-today": "",
 	"arenella-stats-recruiter-downloads-views-week": "",
