basic FE layout of Chat window

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -113,6 +113,7 @@
 	"arenella-app-no-credits-title": "0 Credits verbleiben",
 	"arenella-app-validation-errors-text": "Leider war es nicht möglich die Aktionen durchzuführen, da:",
 	"arenella-app-validation-errors-title": "Validierungsfehler",
+	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Firmenanschrift",
 	"arenella-contact-company-name": "Name der Firma",
 	"arenella-contact-company-registration-email": "Email",
