--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -113,6 +113,7 @@
 	"arenella-app-no-credits-title": "0 Credits remaining",
 	"arenella-app-validation-errors-text": "Unfortunately it was not possible to perform the actions because:",
 	"arenella-app-validation-errors-title": "Validation Errors",
+	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Company Address",
 	"arenella-contact-company-name": "Company Name",
 	"arenella-contact-company-registration-email": "Email",
