--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -113,6 +113,7 @@
 	"arenella-app-no-credits-title": "0 créditos restantes",
 	"arenella-app-validation-errors-text": "Lamentablemente no fue posible realizar las acciones porque:",
 	"arenella-app-validation-errors-title": "Errores de validación",
+	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Dirección de la empresa",
 	"arenella-contact-company-name": "Nombre de empresa",
 	"arenella-contact-company-registration-email": "Correo electrónico",
