--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -113,6 +113,7 @@
 	"arenella-app-no-credits-title": "0 crédits restants",
 	"arenella-app-validation-errors-text": "Malheureusement, il n'a pas été possible d'effectuer les actions car :",
 	"arenella-app-validation-errors-title": "Erreurs de validation",
+	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Adresse de la société",
 	"arenella-contact-company-name": "Nom de l'entreprise",
 	"arenella-contact-company-registration-email": "E-mail",
