--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -113,6 +113,7 @@
 	"arenella-app-no-credits-title": "0 crediti rimanenti",
 	"arenella-app-validation-errors-text": "Purtroppo non è stato possibile eseguire le azioni perché:",
 	"arenella-app-validation-errors-title": "Errori di convalida",
+	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Indirizzo aziendale",
 	"arenella-contact-company-name": "Nome della ditta",
 	"arenella-contact-company-registration-email": "E-mail",
