--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -113,6 +113,7 @@
 	"arenella-app-no-credits-title": "0 Credits resterend",
 	"arenella-app-validation-errors-text": "Helaas was het niet mogelijk om de acties uit te voeren omdat:",
 	"arenella-app-validation-errors-title": "Validatiefouten",
+	"arenella-chat": "Chat",
 	"arenella-contact-company-address": "Bedrijfsadres",
 	"arenella-contact-company-name": "Bedrijfsnaam",
 	"arenella-contact-company-registration-email": "E-mail",
